# quotes

./: .env  Cargo.toml  Procfile
assets/: index.css  new.css
migrations/20170607041142_create_quotes/: up.sql
src/: db.rs  main.rs  markdown.rs
templates/: index.html.hbs  new.html.hbs  quote.html.hbs
