[package]
authors = ["FeÌlix Saparelli <felix@passcod.name>"]
name = "quotes"
version = "1.0.0"

[dependencies]
crowbook-text-processing = "0.2.6"
dotenv = "0.10.0"
lazy_static = "0.2.8"
rocket = "0.2.8"
rocket_codegen = "0.2.8"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"

[dependencies.chrono]
features = ["serde"]
version = "0.3.1"

[dependencies.diesel]
features = ["chrono", "postgres", "serde_json"]
version = "0.13.0"

[dependencies.diesel_codegen]
features = ["postgres"]
version = "0.13.0"

[dependencies.pulldown-cmark]
default-features = false
version = "0.0.14"

[dependencies.rocket_contrib]
default-features = false
features = ["handlebars_templates"]
version = "0.2.8"
